feat: 심화 요구사항